layout.css adding styles

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,9 @@
  */
 html {
   box-sizing: border-box;
+  font-family: 'Bungee', cursive;
+  font-family: 'Source Sans Pro', sans-serif;
+
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -18,8 +21,21 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro';
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container {
+  display: flex;
+  width: 90%;
+  align-items: center;
+  background-color: #f4f1ec;
+}
+
+
+
+
+
