--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,3 +6,13 @@ header {
   justify-content: center;
   
 }
+
+@media only screen and (min-width: 1024px)  {
+header {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  height: 800px;
+}
+
+}
