--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     font-family: sans-serif ;
+    justify-content: space-evenly;
+    height: 550px;
 }
 
 button { 
@@ -26,7 +28,7 @@ form {
 section.new-tweet {
     display: flex;
     align-items: center;
-    padding: 5px;
+    padding: 15px;
   }
 
 #tweet-text {
@@ -34,6 +36,8 @@ section.new-tweet {
     border: hidden;
     border-bottom: 3px solid black;
     height: 125px;
+    
+    
 }
 
 .tweet-footer {
@@ -49,4 +53,12 @@ section.new-tweet {
   padding: 2px;
   border: #162966;
   background-color: khaki;
+}
+
+#tweet-target{
+  justify-content: center;
+  width: 600px;
+}
+@media only screen and (min-width: 1024px)  {
+  
 }
