--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,13 +1,12 @@
 nav {
     display: flex;
-    height: 120px;
+    height: 150px;
     width: 100%;
-    background-color: #4056A1;
+    background-color: #f0a834;
     color: #FFFFFF;
     padding: 1.5em;
     align-self: center;
     justify-content: space-between;
-    flex-grow: 2;
     position: fixed;
     top: 0px;
 }
@@ -15,24 +14,23 @@ nav {
 .logo {
    
     font-size: 1.75em;
-    font-family: 'Bungee', sans-serif;
-    flex: 2;
-    
+    font-family: 'Bungee', sans-serif;    
 }
 .write-tweet {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-around ;
-    flex: 3;
+    align-items: center;
+    justify-content: center ;
 }
 
 .write-new-tweet {
     font-family: sans-serif;
     align-content: flex-start;
 }
-.i {
-    display: flex;
-   justify-content: center;
-}
 
+
+@media only screen and (min-width: 1024px)  {
+nav {
+    background-color: #4056A1;
+    }
+}
