--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,13 +1,13 @@
 header {
   display: flex;
-  height: 800px;
+  
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+
 }
 
-@media only screen and (min-width: 1024px)  {
+@media only screen and (max-width: 1024px)  {
 header {
   display: flex;
   flex-direction: column;
